== 0.5.2

* 3 enhancements
  * added support for custom tostring methods for classes
  * fixed parsing of templated return types
  * static class methods are now registered in the namespace as Klass_method

== 0.5.1 2010-03-05

* 2 minor enhancements
  * if an argument is fully specified, should not append namespace
  * better handling of boolean values

== 0.5.0 2010-03-03

* 1 major enhancement
  * initial release and tested with OpenCV bindings for Lua
