@@ -1,9 +1,10 @@
 == 0.5.2
 
-* 3 enhancements
+* 4 enhancements
   * added support for custom tostring methods for classes
   * fixed parsing of templated return types
   * static class methods are now registered in the namespace as Klass_method
+  * removing functions and methods with class pointer arguments (could use lists later on)
 
 == 0.5.1 2010-03-05
 
